Added Role Provider

--- a/StoreExample/Web.config
+++ b/StoreExample/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ConnectionDefault" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Admin\source\repos\StoreExample\StoreExample\App_Data\Database1.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="ConnectionDefault" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Admin\source\repos\StoreExample\StoreExample\App_Data\Database1.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,6 +21,14 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <authentication mode="Forms">
+      <forms name="auth" timeout="2880" loginUrl="Account/Login" />
+    </authentication>
+    <roleManager enabled="true" defaultProvider="DefaultRoleProvider">
+      <providers>
+        <add name="DefaultRoleProvider" type="StoreExample.Providers.CustomRoleProvider" />
+      </providers>
+    </roleManager> 
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
