--- a/StoreExample/packages.config
+++ b/StoreExample/packages.config
@@ -3,6 +3,8 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Providers" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
