--- a/StoreExample/packages.config
+++ b/StoreExample/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Providers" version="2.0.0" targetFramework="net461" />
@@ -10,6 +13,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
 </packages>
