--- a/StoreExample/packages.config
+++ b/StoreExample/packages.config
@@ -17,4 +17,6 @@
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
 </packages>
